force-app/main/default/objects/XAP_TRG_Trigger_Settings__c/XAP_TRG_Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains settings to turn off triggers, collectively or individually, at the SObject level.</description>
    <label>Trigger Settings</label>
</CustomObject>