force-app/main/default/objects/XAP_TRG_Trigger_Settings__c/fields/Account_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Account_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>