force-app/main/default/objects/XAP_TRG_Trigger_Settings__c/fields/All_Triggers_Enabled__c.field-meta.xml
<CustomField>
    <fullName>All_Triggers_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If true, triggers selected for each object will run. If false, no triggers will run</description>
    <label>All Triggers Enabled</label>
    <type>Checkbox</type>
</CustomField>