force-app/main/default/objects/XAP_TRG_Trigger_Settings__c/fields/Event_Recipes_Demo_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Event_Recipes_Demo_Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Event Recipes Demo Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>